trained XGboost models

--- a/notebooks/EDA_EURUSD_daily.ipynb
+++ b/notebooks/EDA_EURUSD_daily.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5d3c1f72-d2b9-4617-b162-065c90883cd7",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis of EUR/USD of the last 10 years\n",
+    "#### This notebook contains:\n",
+    "- Data Inspection\n",
+    "- Pattern and Trend analysis\n",
+    "- Volitility Analysis\n",
+    "- Correlation Analysis\n",
+    "- Preprocessing\n",
+    "- Feature engineering\n",
+    "- Feature Scaling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4f12de35-eb1f-4a58-9cc2-1169f3d8e725",
