--- a/TODO.txt
+++ b/TODO.txt
@@ -14,7 +14,11 @@ Engineer sequences (sliding windows) and perform feature selection tailored to t
 Optimize hyperparameters like the number of neurons, layers, sequence length, and dropout rates.
 Save the top 3 LSTM models with the best prediction performance.
 
-Notebook 4: Model Comparison
-Compare the top 9 models (3 from each type) using validation metrics.
+Notebook 4: TCN
+TCNs have been shown to outperform LSTMs in certain sequential tasks due to their
+ability to capture long-term dependencies efficiently.
+
+Notebook 5: Model Comparison
+Compare the top 12 models (3 from each type) using validation metrics.
 Test the top 3 overall models on a real-world paper trading account.
 Evaluate their actual performance in terms of profitability and robustness.
