--- a/TODO.txt
+++ b/TODO.txt
@@ -1,24 +1,25 @@
-Notebook 1: Random Forest
-Perform forward selection (or backward elimination) with Random Forest.
-Use metrics like MSE and AIC to select the best features.
-Tune hyperparameters using Grid Search, Random Search, or Bayesian Optimization.
-Identify the top 3 Random Forest models based on their performance.
+Build live API readings:
+Find api where we can get 5 or 10min or even more frequent EURUSD price readings
+Build system that can receive these live readings
 
-Notebook 2: XGBoost
-Conduct feature selection tailored to XGBoost’s strengths (e.g., use XGBoost's built-in feature importance).
-Optimize hyperparameters such as learning rate, tree depth, and regularization terms.
-Save the top 3 XGBoost models for comparison.
+Deploy model and model-ecosystem:
+deploy model.
+deploy system that keeps track of "highest yet" and "lowest yet" readings
+deploy system that scales input with StandardScaler
+make prediction, inverse scale output, give closing prediction
+give confidence interval-ish measure of how certain prediction is,
+display time that highest/lowest reading was taken
+display time until market close
 
-Notebook 3: LSTM
-Engineer sequences (sliding windows) and perform feature selection tailored to temporal patterns.
-Optimize hyperparameters like the number of neurons, layers, sequence length, and dropout rates.
-Save the top 3 LSTM models with the best prediction performance.
+Periodic retrain:
+Build functionality that enables cmd line arguments to retrain model with latest
+available data
 
-Notebook 4: TCN
-TCNs have been shown to outperform LSTMs in certain sequential tasks due to their
-ability to capture long-term dependencies efficiently.
+Build csv performance tracking system:
+Record each reading: Time, Price, Highest yet, Lowest yet, Prediction
 
-Notebook 5: Model Comparison
-Compare the top 12 models (3 from each type) using validation metrics.
-Test the top 3 overall models on a real-world paper trading account.
-Evaluate their actual performance in terms of profitability and robustness.
+Build a simple GUI mode with pygame:
+show graph indicating live readings coming in,
+highlight highest and lowest readings
+highlight current close prediction
+add a timer until next reading, timer until daily close
